NTR - Update settings overview design

--- a/Resources/administration/src/module/sw-mail-template/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-mail-template/extension/sw-settings-index/sw-settings-index.html.twig
@@ -5,7 +5,7 @@
         <template v-if="next712">
             <sw-settings-item id="sw-mail-template" :label="$tc('sw-mail-template.general.mainMenuItemGeneral')" :to="{ name: 'sw.mail.template.index' }">
                 <template slot="icon">
-                    <sw-icon name="default-communication-envelope" size="45"></sw-icon>
+                    <sw-icon name="default-communication-envelope"></sw-icon>
                 </template>
             </sw-settings-item>
         </template>
