--- a/Resources/administration/src/module/sw-plugin/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-plugin/extension/sw-settings-index/sw-settings-index.html.twig
@@ -3,7 +3,7 @@
 
     <sw-settings-item :label="$tc('sw-plugin.general.mainMenuItemGeneral')" :to="{ name: 'sw.plugin.index' }">
         <template slot="icon">
-            <sw-icon name="default-object-plug" size="45"></sw-icon>
+            <sw-icon name="default-object-plug"></sw-icon>
         </template>
     </sw-settings-item>
 {% endblock %}
