--- a/Resources/administration/src/module/sw-settings-currency/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-currency/extension/sw-settings-index/sw-settings-index.html.twig
@@ -4,48 +4,7 @@
     {% block sw_settings_currency_item %}
         <sw-settings-item id="sw-settings-currency" :label="$tc('sw-settings-currency.general.mainMenuItemGeneral')" :to="{ name: 'sw.settings.currency.index' }">
             <template slot="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="80" height="80" viewBox="0 0 80 80">
-                    <defs>
-                        <circle id="currency-b" cx="58" cy="52" r="11"/>
-                        <filter id="currency-a" width="127.3%" height="127.3%" x="-18.2%" y="-9.1%" filterUnits="objectBoundingBox">
-                            <feMorphology in="SourceAlpha" operator="dilate" radius="1" result="shadowSpreadOuter1"/>
-                            <feOffset dx="-2" dy="2" in="shadowSpreadOuter1" result="shadowOffsetOuter1"/>
-                            <feComposite in="shadowOffsetOuter1" in2="SourceAlpha" operator="out" result="shadowOffsetOuter1"/>
-                            <feColorMatrix in="shadowOffsetOuter1" values="0 0 0 0 0.0823529412   0 0 0 0 0.266666667   0 0 0 0 0.466666667  0 0 0 0.1 0"/>
-                        </filter>
-                        <circle id="currency-d" cx="10" cy="10" r="9.167"/>
-                        <filter id="currency-c" width="132.7%" height="132.7%" x="-21.8%" y="-10.9%" filterUnits="objectBoundingBox">
-                            <feMorphology in="SourceAlpha" operator="dilate" radius="1" result="shadowSpreadOuter1"/>
-                            <feOffset dx="-2" dy="2" in="shadowSpreadOuter1" result="shadowOffsetOuter1"/>
-                            <feComposite in="shadowOffsetOuter1" in2="SourceAlpha" operator="out" result="shadowOffsetOuter1"/>
-                            <feColorMatrix in="shadowOffsetOuter1" values="0 0 0 0 0.0823529412   0 0 0 0 0.266666667   0 0 0 0 0.466666667  0 0 0 0.1 0"/>
-                        </filter>
-                    </defs>
-                    <g fill="none" fill-rule="evenodd">
-                        <path fill="#E8F6FF" fill-rule="nonzero" d="M9,50.938241 C9,74.3721574 36.5043038,54.8438938 48.7284389,66.5608519 C60.9525739,78.2778101 82.3448102,64.6080256 74.1953869,50.938241 C66.0459635,37.2684565 60.9525739,16.7637797 44.6537272,28.4807379 C28.3548805,40.1976961 9,27.5043247 9,50.938241 Z"/>
-                        <g fill-rule="nonzero" transform="translate(18 27)">
-                            <rect width="42" height="24" x="1" y="1" fill="#FFF" stroke="#303A4F" stroke-width="2" rx="4"/>
-                            <circle cx="22" cy="13" r="7" fill="#D8DDE6"/>
-                            <rect width="5" height="5" x="34" y="5" fill="#D8DDE6" rx="2.5"/>
-                            <rect width="5" height="5" x="5" y="16" fill="#D8DDE6" rx="2.5"/>
-                        </g>
-                        <g fill-rule="nonzero">
-                            <use fill="#000" filter="url(#currency-a)" xlink:href="#currency-b"/>
-                            <use fill="#189EFF" stroke="#303A4F" stroke-width="2" xlink:href="#currency-b"/>
-                        </g>
-                        <path fill="#FFF" d="M58.9288739,57.192 C58.4382048,57.192 57.9795427,57.1093342 57.5528739,56.944 C57.1262051,56.7786658 56.7448756,56.5360016 56.4088739,56.216 C56.0728722,55.8959984 55.7875417,55.498669 55.5528739,55.024 C55.3182061,54.549331 55.1475411,54.008003 55.0408739,53.4 L54.0328739,53.4 L54.0328739,52.504 L54.9448739,52.44 C54.9342072,52.3546662 54.9288739,52.2720004 54.9288739,52.192 L54.9288739,51.704 C54.9288739,51.629333 54.9342072,51.554667 54.9448739,51.48 L54.0328739,51.48 L54.0328739,50.584 L55.0408739,50.52 C55.1475411,49.9013302 55.3208727,49.3520024 55.5608739,48.872 C55.8008751,48.3919976 56.0968721,47.9866683 56.4488739,47.656 C56.8008757,47.3253317 57.2008717,47.0720009 57.6488739,46.896 C58.0968761,46.7199991 58.5875379,46.632 59.1208739,46.632 C59.6008763,46.632 60.0595384,46.7439989 60.4968739,46.968 C60.9342094,47.1920011 61.307539,47.4959981 61.6168739,47.88 L60.5768739,48.888 C60.3635395,48.6426654 60.1368751,48.4453341 59.8968739,48.296 C59.6568727,48.1466659 59.3822088,48.072 59.0728739,48.072 C58.496871,48.072 58.0222091,48.2853312 57.6488739,48.712 C57.2755387,49.1386688 57.0248745,49.7359962 56.8968739,50.504 L60.6408739,50.504 L60.6408739,51.48 L56.8008739,51.48 C56.7902072,51.5440003 56.7848739,51.6079997 56.7848739,51.672 L56.7848739,52.16 C56.7848739,52.2506671 56.7902072,52.3386662 56.8008739,52.424 L60.0008739,52.424 L60.0008739,53.4 L56.9128739,53.4 C57.062208,54.1466704 57.3182054,54.7253313 57.6808739,55.136 C58.0435424,55.5466687 58.4968712,55.752 59.0408739,55.752 C59.3822089,55.752 59.6862059,55.6666675 59.9528739,55.496 C60.2195419,55.3253325 60.4755393,55.0746683 60.7208739,54.744 L61.7608739,55.704 C61.3875387,56.1840024 60.9688762,56.5519987 60.5048739,56.808 C60.0408716,57.0640013 59.5155435,57.192 58.9288739,57.192 Z"/>
-                        <path stroke="#303A4F" stroke-linecap="round" stroke-width="2" d="M35,24 L61,24 C63.209139,24 65,25.790861 65,28 L65,39"/>
-                        <g transform="translate(12 17)">
-                            <g fill-rule="nonzero">
-                                <use fill="#000" filter="url(#currency-c)" xlink:href="#currency-d"/>
-                                <use fill="#57D9A3" stroke="#303A4F" stroke-width="2" xlink:href="#currency-d"/>
-                            </g>
-                            <path fill="#FFF" d="M9.3766554,15.32 L9.3766554,14.12 C9.00865356,14.0799998 8.63865726,13.9820008 8.2666554,13.826 C7.89465354,13.6699992 7.57265676,13.4640013 7.3006554,13.208 L7.9246554,12.272 C8.2046568,12.4960011 8.48865396,12.6759993 8.7766554,12.812 C9.06465684,12.9480007 9.37265376,13.016 9.7006554,13.016 C10.0926574,13.016 10.3846544,12.9260009 10.5766554,12.746 C10.7686564,12.5659991 10.8646554,12.3120016 10.8646554,11.984 C10.8646554,11.7199987 10.7846562,11.5000009 10.6246554,11.324 C10.4646546,11.1479991 10.2626566,10.9880007 10.0186554,10.844 C9.77465418,10.6999993 9.5126568,10.5620007 9.2326554,10.43 C8.952654,10.2979993 8.69065662,10.1420009 8.4466554,9.962 C8.20265418,9.7819991 8.0006562,9.56600126 7.8406554,9.314 C7.6806546,9.06199874 7.6006554,8.74800188 7.6006554,8.372 C7.6006554,7.8119972 7.7606538,7.34600186 8.0806554,6.974 C8.400657,6.60199814 8.83265268,6.36800048 9.3766554,6.272 L9.3766554,5.048 L10.3366554,5.048 L10.3366554,6.248 C10.7206573,6.29600024 11.050654,6.40599914 11.3266554,6.578 C11.6026568,6.75000086 11.8526543,6.95199884 12.0766554,7.184 L11.3686554,7.988 C11.1446543,7.77999896 10.9286564,7.62200054 10.7206554,7.514 C10.5126544,7.40599946 10.2646568,7.352 9.9766554,7.352 C9.64865376,7.352 9.39265632,7.43399918 9.2086554,7.598 C9.02465448,7.76200082 8.9326554,7.99999844 8.9326554,8.312 C8.9326554,8.5520012 9.0126546,8.74999922 9.1726554,8.906 C9.3326562,9.06200078 9.53465418,9.20599934 9.7786554,9.338 C10.0226566,9.47000066 10.284654,9.60199934 10.5646554,9.734 C10.8446568,9.86600066 11.1066542,10.0239991 11.3506554,10.208 C11.5946566,10.3920009 11.7966546,10.6179987 11.9566554,10.886 C12.1166562,11.1540013 12.1966554,11.487998 12.1966554,11.888 C12.1966554,12.4640029 12.036657,12.9459981 11.7166554,13.334 C11.3966538,13.7220019 10.9366584,13.9719994 10.3366554,14.084 L10.3366554,15.32 L9.3766554,15.32 Z"/>
-                        </g>
-                        <path fill="#E8F6FF" fill-rule="nonzero" d="M52,29 L48,29 C48.5522847,29 49,28.5522847 49,28 C49,27.4477153 48.5522847,27 48,27 L52,27 C51.4477153,27 51,27.4477153 51,28 C51,28.5522847 51.4477153,29 52,29 Z"/>
-                        <path fill="#FFF" fill-rule="nonzero" d="M44,25 L40,25 C40.5522847,25 41,24.5522847 41,24 C41,23.4477153 40.5522847,23 40,23 L44,23 C43.4477153,23 43,23.4477153 43,24 C43,24.5522847 43.4477153,25 44,25 Z"/>
-                    </g>
-                </svg>
+                <sw-icon name="default-symbol-euro"></sw-icon>
             </template>
         </sw-settings-item>
     {% endblock %}
