--- a/Resources/administration/src/module/sw-settings-login-registration/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-login-registration/extension/sw-settings-index/sw-settings-index.html.twig
@@ -6,7 +6,7 @@
                 :label="$tc('sw-settings-login-registration.general.mainMenuItemGeneral')"
                 :to="{ name: 'sw.settings.login.registration.index' }">
             <template slot="icon">
-                <sw-icon name="default-action-settings" size="45"></sw-icon>
+                <sw-icon name="default-action-log-in"></sw-icon>
             </template>
         </sw-settings-item>
     {% endblock %}
