--- a/Resources/administration/src/module/sw-settings-privacy/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-privacy/extension/sw-settings-index/sw-settings-index.html.twig
@@ -5,7 +5,7 @@
         <template v-if="next2539">
             <sw-settings-item id="sw-settings-privacy" :label="$tc('sw-settings-privacy.general.mainMenuItemGeneral')" :to="{ name: 'sw.settings.privacy.index' }">
                 <template slot="icon">
-                    <sw-icon name="default-basic-shape-heart" size="45"></sw-icon>
+                    <sw-icon name="default-lock-closed"></sw-icon>
                 </template>
             </sw-settings-item>
         </template>
