--- a/Resources/administration/src/module/sw-settings-seo/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-seo/extension/sw-settings-index/sw-settings-index.html.twig
@@ -7,7 +7,7 @@
                           :label="$tc('sw-settings-seo.general.mainMenuItemGeneral')"
                           :to="{ name: 'sw.settings.seo.index' }">
             <template slot="icon">
-                <sw-icon name="default-action-search" size="45"></sw-icon>
+                <sw-icon name="default-action-search"></sw-icon>
             </template>
         </sw-settings-item>
     {% endblock %}
