--- a/Resources/administration/src/module/sw-settings-custom-field/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-custom-field/extension/sw-settings-index/sw-settings-index.html.twig
@@ -4,7 +4,7 @@
     {% block sw_settings_custom_field_item %}
         <sw-settings-item v-if="next754" id="sw-settings-custom-field" :label="$tc('sw-settings-custom-field.general.mainMenuItemGeneral')" :to="{ name: 'sw.settings.custom.field.index' }">
             <template slot="icon">
-                <sw-icon name="default-basic-stack-block" size="45"></sw-icon>
+                <sw-icon name="default-basic-stack-block"></sw-icon>
             </template>
         </sw-settings-item>
     {% endblock %}
