--- a/Resources/administration/src/module/sw-settings-customer-group/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-customer-group/extension/sw-settings-index/sw-settings-index.html.twig
@@ -4,7 +4,7 @@
     {% block sw_settings_customer_group_item %}
         <sw-settings-item id="sw-settings-customer-group" :label="$tc('sw-settings-customer-group.general.mainMenuItemGeneral')" :to="{ name: 'sw.settings.customer.group.index' }">
             <template slot="icon">
-                <sw-icon name="default-object-address" size="45"></sw-icon>
+                <sw-icon name="default-avatar-multiple"></sw-icon>
             </template>
         </sw-settings-item>
     {% endblock %}
