--- a/Resources/administration/src/module/sw-settings-language/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-language/extension/sw-settings-index/sw-settings-index.html.twig
@@ -4,35 +4,7 @@
     {% block sw_settings_language_item %}
         <sw-settings-item id="sw-settings-language" :label="$tc('sw-settings-language.general.mainMenuItemGeneral')" :to="{ name: 'sw.settings.language.index' }">
             <template slot="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="80" height="80" viewBox="0 0 80 80">
-                    <defs>
-                        <circle id="language-a" cx="28" cy="28" r="28"/>
-                        <path id="language-d" d="M42.1359281,36.7775717 C39.5621722,34.572869 38,31.6746409 38,28.5 C38,21.5964406 45.3873016,16 54.5,16 C63.6126984,16 71,21.5964406 71,28.5 C71,35.4035594 63.6126984,41 54.5,41 C51.8445644,41 49.3356386,40.5247857 47.1133195,39.6804914 C45.0808761,40.4798888 42.6270189,41 39.8333333,41 C39.8333333,41 41.5825681,39.4325853 42.1359281,36.7775717 Z"/>
-                        <filter id="language-c" width="124.2%" height="132%" x="-15.2%" y="-12%" filterUnits="objectBoundingBox">
-                            <feMorphology in="SourceAlpha" operator="dilate" radius="2" result="shadowSpreadOuter1"/>
-                            <feOffset dx="-2" dy="2" in="shadowSpreadOuter1" result="shadowOffsetOuter1"/>
-                            <feComposite in="shadowOffsetOuter1" in2="SourceAlpha" operator="out" result="shadowOffsetOuter1"/>
-                            <feColorMatrix in="shadowOffsetOuter1" values="0 0 0 0 0.0823529412   0 0 0 0 0.266666667   0 0 0 0 0.466666667  0 0 0 0.1 0"/>
-                        </filter>
-                    </defs>
-                    <g fill="none" fill-rule="evenodd">
-                        <path fill="#E8F6FF" fill-rule="nonzero" d="M3.79349889,40.9889761 C3.79349889,70.597807 33.4370335,45.9237813 46.6119378,60.7281967 C59.7868421,75.5326121 82.8429245,58.2607941 74.059655,40.9889761 C65.2763855,23.7171582 59.7868421,-2.19056882 42.220303,12.6138466 C24.653764,27.418262 3.79349889,11.3801453 3.79349889,40.9889761 Z" transform="rotate(25 39.9 37.276)"/>
-                        <g transform="translate(12 12)">
-                            <mask id="language-b" fill="#fff">
-                                <use xlink:href="#language-a"/>
-                            </mask>
-                            <use fill="#FFF" fill-rule="nonzero" stroke="#303A4F" stroke-width="2" xlink:href="#language-a"/>
-                            <path stroke="#303A4F" stroke-linejoin="round" stroke-width="2" d="M5.54347548,45.5079245 L6.4480588,40.1263802 C10.0663921,42.5181777 12.4786143,43.1161271 13.6847254,41.9202283 C14.8908365,40.7243296 15.1923642,39.2294561 14.5893087,37.435608 C16.3984753,36.8376586 17.3030587,36.2397093 17.3030587,35.6417599 C17.3030587,35.0438105 16.7000031,34.4458612 15.493892,33.8479118 C17.3030587,33.8479118 18.207642,33.5489371 18.207642,32.9509877 C18.207642,32.3530384 17.9061142,31.4561143 17.3030587,30.2602156 C19.7152808,29.6622662 20.9213919,29.0643168 20.9213919,28.4663674 C20.9213919,27.5694434 16.3984753,23.0848231 17.3030587,20.3940509 C18.207642,17.7032787 18.207642,6.94019004 8.25722544,3.3524938 C-1.69319109,-0.23520243 -10.7390243,4.24941786 -12.5481909,6.04326598 C-14.3573576,7.8371141 -23.4031908,17.7032787 -8.92985766,34.7448358 C-8.92985766,37.7345827 -9.23138543,41.3222789 -9.83444098,45.5079245 L5.54347548,45.5079245 Z" mask="url(#language-b)"/>
-                        </g>
-                        <g fill-rule="nonzero" stroke-linecap="round" stroke-linejoin="round">
-                            <use fill="#000" filter="url(#language-c)" xlink:href="#language-d"/>
-                            <path fill="#189EFF" fill-rule="evenodd" stroke="#303A4F" stroke-width="2" d="M41.0195742,37.1213937 C38.4491871,34.7315404 37,31.7106306 37,28.5 C37,20.9741989 44.8859425,15 54.5,15 C64.1140575,15 72,20.9741989 72,28.5 C72,36.0258011 64.1140575,42 54.5,42 C51.9159481,42 49.409786,41.5689653 47.1190804,40.7484741 C44.9216925,41.560365 42.4585789,42 39.8333333,42 L37.2188488,42 L39.1659925,40.2552476 C39.2143851,40.211885 39.3211925,40.1049931 39.467124,39.9385675 C39.7206061,39.6494871 39.9762053,39.308022 40.2152326,38.9185999 C40.5562635,38.362994 40.8312115,37.7624731 41.0195742,37.1213937 Z"/>
-                        </g>
-                        <circle cx="46.5" cy="28.5" r="2.5" fill="#FFF" fill-rule="nonzero"/>
-                        <circle cx="54.5" cy="28.5" r="2.5" fill="#FFF" fill-rule="nonzero"/>
-                        <circle cx="62.5" cy="28.5" r="2.5" fill="#FFF" fill-rule="nonzero"/>
-                    </g>
-                </svg>
+                <sw-icon name="default-location-flag"></sw-icon>
             </template>
         </sw-settings-item>
     {% endblock %}
