--- a/Resources/administration/src/module/sw-settings-number-range/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-number-range/extension/sw-settings-index/sw-settings-index.html.twig
@@ -4,35 +4,7 @@
     {% block sw_settings_number_range_item %}
         <sw-settings-item id="sw-settings-number-range" :label="$tc('sw-settings-number-range.general.mainMenuItemGeneral')" :to="{ name: 'sw.settings.number.range.index' }">
             <template slot="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="80" height="80" viewBox="0 0 80 80">
-                    <defs>
-                        <circle id="number-range-a" cx="28" cy="28" r="28"/>
-                        <path id="number-range-d" d=""/>
-                        <filter id="number-range-c" width="124.2%" height="132%" x="-15.2%" y="-12%" filterUnits="objectBoundingBox">
-                            <feMorphology in="SourceAlpha" operator="dilate" radius="2" result="shadowSpreadOuter1"/>
-                            <feOffset dx="-2" dy="2" in="shadowSpreadOuter1" result="shadowOffsetOuter1"/>
-                            <feComposite in="shadowOffsetOuter1" in2="SourceAlpha" operator="out" result="shadowOffsetOuter1"/>
-                            <feColorMatrix in="shadowOffsetOuter1" values="0 0 0 0 0.0823529412   0 0 0 0 0.266666667   0 0 0 0 0.466666667  0 0 0 0.1 0"/>
-                        </filter>
-                    </defs>
-                    <g fill="none" fill-rule="evenodd">
-                        <path fill="#E8F6FF" fill-rule="nonzero" d=""/>
-                        <g transform="translate(12 12)">
-                            <mask id="number-range-b" fill="#fff">
-                                <use xlink:href="#number-range-a"/>
-                            </mask>
-                            <use fill="#FFF" fill-rule="nonzero" stroke="#303A4F" stroke-width="2" xlink:href="#number-range-a"/>
-                            <path stroke="#303A4F" stroke-linejoin="round" stroke-width="2" d="" mask="url(#number-range-b)"/>
-                        </g>
-                        <g fill-rule="nonzero" stroke-linecap="round" stroke-linejoin="round">
-                            <use fill="#000" filter="url(#number-range-c)" xlink:href="#number-range-d"/>
-                            <path fill="#189EFF" fill-rule="evenodd" stroke="#303A4F" stroke-width="2" d=""/>
-                        </g>
-                        <circle cx="46.5" cy="28.5" r="2.5" fill="#FFF" fill-rule="nonzero"/>
-                        <circle cx="54.5" cy="28.5" r="2.5" fill="#FFF" fill-rule="nonzero"/>
-                        <circle cx="62.5" cy="28.5" r="2.5" fill="#FFF" fill-rule="nonzero"/>
-                    </g>
-                </svg>
+                <sw-icon name="default-documentation-paper-pencil-signed"></sw-icon>
             </template>
         </sw-settings-item>
     {% endblock %}
