--- a/Resources/administration/src/module/sw-settings-salutation/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-salutation/extension/sw-settings-index/sw-settings-index.html.twig
@@ -4,7 +4,7 @@
     {% block sw_settings_salutation_item %}
         <sw-settings-item id="sw-settings-salutation" :label="$tc('sw-settings-salutation.general.mainMenuItemGeneral')" :to="{ name: 'sw.settings.salutation.index' }">
             <template slot="icon">
-                <sw-icon name="default-communication-speech-bubbles" size="45"></sw-icon>
+                <sw-icon name="default-communication-speech-bubbles"></sw-icon>
             </template>
         </sw-settings-item>
     {% endblock %}
