--- a/Resources/administration/src/module/sw-settings-snippet/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/extension/sw-settings-index/sw-settings-index.html.twig
@@ -4,7 +4,7 @@
     {% block sw_settings_snippet_set_item %}
         <sw-settings-item id="sw-settings-snippet" :label="$tc('sw-settings-snippet.general.mainMenuItemGeneral')" :to="{ name: 'sw.settings.snippet.index' }">
             <template slot="icon">
-                <sw-icon name="default-object-globe" size="45"></sw-icon>
+                <sw-icon name="default-object-globe"></sw-icon>
             </template>
         </sw-settings-item>
     {% endblock %}
