--- a/Resources/administration/src/module/sw-settings-store/extension/sw-settings-index/sw-settings-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-store/extension/sw-settings-index/sw-settings-index.html.twig
@@ -4,7 +4,7 @@
     {% block sw_settings_store_item %}
         <sw-settings-item id="sw-settings-store" :label="$tc('sw-settings-store.general.mainMenuItemGeneral')" :to="{ name: 'sw.settings.store.index' }">
             <template slot="icon">
-                <sw-icon name="default-device-laptop" size="45"></sw-icon>
+                <sw-icon name="default-device-laptop"></sw-icon>
             </template>
         </sw-settings-item>
     {% endblock %}
