NEXT-2908 - remove the feature flag NEXT2021 and comment out the menu entry for editing a single variant

--- a/Resources/administration/src/app/component/form/sw-number-field/sw-number-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-number-field/sw-number-field.html.twig
@@ -7,6 +7,7 @@
                :placeholder="placeholder"
                :disabled="disabled"
                autocomplete="off"
+               @input="onInput"
                @keydown.up="increaseNumberByStep"
                @keydown.down="decreaseNumberByStep"
                @change="onChange"
