--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-modal-variant-generation/sw-product-modal-variant-generation.scss
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-modal-variant-generation/sw-product-modal-variant-generation.scss
@@ -50,3 +50,9 @@
 p.sw-product-variants-configurator-selection__modal--delete-text {
     margin-bottom: 20px;
 }
+
+.sw-product-modal-variant-generation__notification-modal {
+    p:first-child {
+        margin-bottom: 20px;
+    }
+}
