--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-restriction-selection/sw-product-restriction-selection.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-restriction-selection/sw-product-restriction-selection.html.twig
@@ -12,7 +12,7 @@
                                 <option
                                         slot="options"
                                         v-for="item in availableGroups"
-                                        :key="item.group.id"
+                                        :key="item.id"
                                         :value="item.group.id">
                                     {{ item.group.translated.name }}
                                 </option>
