--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-price-field/sw-product-variants-price-field.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-price-field/sw-product-variants-price-field.html.twig
@@ -6,7 +6,7 @@
                        v-model="price.gross"
                        size="small"
                        class="sw-product-variants-price-field__input"
-                       :readonly="readonly"
+                       :disabled="readonly"
                        @input="onPriceGrossChange"
                        v-bind="$attrs"/>
             </div>
@@ -27,7 +27,7 @@
                        v-model="price.net"
                        size="small"
                        class="sw-field sw-product-variants-price-field__input"
-                       :readonly="readonly"
+                       :disabled="readonly"
                        @input="onPriceNetChange"
                        v-bind="$attrs"/>
             </div>
