--- a/Resources/administration/src/app/component/form/sw-price-field/sw-price-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-price-field/sw-price-field.html.twig
@@ -10,7 +10,7 @@
                       :validation="validation"
                       :size="compact ? 'small' : 'default'"
                       :min="0"
-                      @change="onPriceGrossChange"
+                      @input="onPriceGrossChange"
                       v-bind="$attrs"
                       v-model="price.gross">
                 <template #suffix>
@@ -32,7 +32,7 @@
                       :validation="validation"
                       :size="compact ? 'small' : 'default'"
                       :min="0"
-                      @change="onPriceNetChange"
+                      @input="onPriceNetChange"
                       v-bind="$attrs"
                       v-model="price.net">
                 <template #suffix>
