--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-configurator-restrictions/sw-product-variants-configurator-restrictions.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-configurator-restrictions/sw-product-variants-configurator-restrictions.html.twig
@@ -4,7 +4,6 @@
         {% block sw_product_variants_configurator_restrictions_search %}
             <div class="sw-product-variants-configurator-restrictions__search">
                 {% block sw_product_variants_configurator_restrictions_search_field %}
-                    {# TODO: IMPLEMENT RESTRICTION SEARCH! #}
                     <sw-simple-search-field
                             v-model="term"
                             :placeholder="$tc('sw-product.variations.configuratorModal.searchRestrictions')">
@@ -36,7 +35,7 @@
                             <template slot="column-id" slot-scope="{ item, isInlineEdit, compact }">
                                 <template v-for="restriction in getRestrictionsWithNaming(item.id).values">
                                     <span class="sw-product-variants-configurator-restrictions__group-name">{{ restriction.group }}:</span>
-                                    <sw-label v-for="option in restriction.options" ghost>{{ option }}</sw-label>
+                                    <sw-label v-for="option in restriction.options" :key="option.id" ghost>{{ option }}</sw-label>
                                 </template>
                             </template>
                         {% endblock %}
