NTR - Improve settings item gap

--- a/Resources/administration/src/module/sw-settings/page/sw-settings-index/sw-settings-index.scss
+++ b/Resources/administration/src/module/sw-settings/page/sw-settings-index/sw-settings-index.scss
@@ -2,5 +2,6 @@
     .sw-settings__card .sw-card__content {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+        grid-gap: 30px 10px;
     }
 }
