--- a/Resources/administration/src/module/sw-settings/component/sw-settings-item/sw-settings-item.scss
+++ b/Resources/administration/src/module/sw-settings/component/sw-settings-item/sw-settings-item.scss
@@ -6,10 +6,8 @@ $sw-settings-item-hover-text-color: $color-shopware-blue;
 .sw-settings-item {
     color: $sw-settings-item-text-color;
     text-decoration: none;
-    border-radius: 2px;
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
 
     &.is--disabled {
         opacity: 0.4;
@@ -45,6 +43,10 @@ $sw-settings-item-hover-text-color: $color-shopware-blue;
 
         .sw-settings-item__icon {
             background-color: darken($color-light-gray, 4%);
+
+            .sw-icon {
+                color: $sw-settings-item-hover-text-color;
+            }
         }
     }
 }
