--- a/Resources/administration/src/module/sw-login/page/index/sw-login.scss
+++ b/Resources/administration/src/module/sw-login/page/index/sw-login.scss
@@ -137,7 +137,9 @@ $sw-login-error-animation-duration: .15s;
         display: flex;
         flex-direction: row;
         overflow: hidden;
-        background: lighten($sw-login-color-background, 10%) url('https://login-image.shopware.com/login/login.jpg') center center;
+        background-color: lighten($sw-login-color-background, 10%);
+        background-image: url('https://login-image.shopware.com/login/login.jpg'), url('../img/sw-login-background.png');
+        background-position: center center;
         background-size: cover;
         opacity: 1;
         transition: opacity $sw-login-success-animation-duration ease-in-out,
