NEXT-1390 - Fix loading new entities in one to many grid

--- a/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
@@ -116,12 +116,18 @@
                                     ref="countryStateGrid"
                                     :collection="country.states"
                                     :fullPage="false"
+                                    :localMode="country.isNew()"
                                     :columns="stateColumns">
                                 <template #column-name="{ item }">
                                     <a class="sw-settings-country-detail__link"
                                        @click="onClickCountryState(item)">
                                         {{ item.name }}
                                     </a>
+                                </template>
+                                <template #more-actions="{ item }">
+                                    <sw-context-menu-item @click="onClickCountryState(item)">
+                                        {{ $tc('sw-settings-country.detail.editAction') }}
+                                    </sw-context-menu-item>
                                 </template>
                             </sw-one-to-many-grid>
                         </template>
